delay loop tweaks